# robotframework-imagecompare

./: .gitignore  pyproject.toml  tasks.py
ImageCompare/: CompareImage.py  __init__.py  imagecompare.py
atest/: Compare.robot
atest/testdata/: area_mask.json
docs/: README.md  imagecompare.html
