[tool.poetry]
name = "robotframework-imagecompare"
version = "0.1.0"
description = "A Robot Framework Library for image comparisons"
authors = ["Many Kasiriha <many.kasiriha@dbschenker.com>"]
license = "Apache 2.0"
packages = [
    { include = "ImageCompare" },
]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python-headless = "^4.5.5"
robotframework = ">=4"
numpy = "^1.22.3"
scikit-image = "^0.19.2"
imutils = "^0.5.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
invoke = "^1.7.0"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
